# statler

./: .gitignore  .pdm.toml  README.md  pyproject.toml
assets/bowl/: wide_bowl.urdf
assets/cabinet2/: cabinet_0007.urdf  dof_rootd_Aa001_t.processed.obj.mtl  dof_rootd_Aa002_t.processed.obj.mtl  none_motion.processed.obj.mtl
cap/: lmp.py  lmp_warpper.py  minimal_demo.py  table_corners.json  ur5_arm.py  ur5_demo.py  ur5_demo_prompt_mod.py  world_model.py
cap/demo/: ur5_general_demo.py
cap/envs/: dummy_env.py  ur5_env.py  ur5_env_config.py
cap/experiments/: evaluate_models.py
cap/helpers/: __init__.py  listener.py  logging.py  openai_endpoints.py  prompt.py  speaker.py  speech_to_text.py  utils.py
cap/pybullet_demos/: pybullet_demo.py  pybullet_disinfection_env.py  pybullet_env.py  pybullet_env_config.py  pybullet_weight_env.py
results-reference/disinfection/: baseline-episode00-code.txt  baseline-episode00.txt  baseline-episode01-code.txt  baseline-episode01.txt  baseline-episode02-code.txt  baseline-episode02.txt  baseline-episode03-code.txt  baseline-episode03.txt  baseline-episode04-code.txt  baseline-episode04.txt  baseline-episode05-code.txt  baseline-episode05.txt  baseline-episode06-code.txt  baseline-episode06.txt  baseline-episode07-code.txt  baseline-episode07.txt  baseline-episode08-code.txt  baseline-episode08.txt  baseline-episode09-code.txt  baseline-episode09.txt  baseline-episode10-code.txt  baseline-episode10.txt  baseline-episode11-code.txt  baseline-episode11.txt  baseline-episode12-code.txt  baseline-episode12.txt  baseline-episode13.txt  (+157 more)
(+355 files in other folders)
