[project]
name = "statler"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Takuma Yoneda",email = "takuma-yoneda@users.noreply.github.com"},
]
dependencies = [
    "openai>=1.33.0",
    "opencv-python>=4.10.0.82",
    "matplotlib>=3.7.5",
    "moviepy>=1.0.3",
    "colorlog>=6.8.2",
    "shapely>=2.0.4",
    "pygame>=2.5.2",
    "gtts>=2.5.1",
    "scikit-learn>=1.3.2",
    "scikit-image>=0.21.0",
    "pybullet>=3.2.6",
    "torch==2.2.2",
    "torchvision>=0.17.2",
    "astunparse>=1.6.3",
    "pygments>=2.18.0",
    "tenacity>=8.3.0",
]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
